# graphs_analysis

./: .gitignore  README.md  algo.py  bench.py  dataset_utils.py  sources_generator.py  utils.py
.github/workflows/: CI.yml
PageRank/GraphBLAS/: bench_runner.py
PageRank/Spark/: Makefile  main.py
bench/: Bench.py
bench/MSPBFS/: MSBFSBench.py
bench/PageRank/: GBBenchRunner.py  PageRankBench.py  SparkBenchRunner.py
bench/SSPBFS/: GBBenchRunner.py  SSPBFSBench.py
docker/: README.md
docker/MSBFS/GraphBLAS/: Dockerfile
docker/MSBFS/Gunrock/: Dockerfile
docker/MSBFS/Spark/: Dockerfile
docker/Pagerank/GraphBLAS/: Dockerfile  requirements.txt
docker/Pagerank/Gunrock/: Dockerfile
docker/Pagerank/Spark/: Dockerfile  requirements.txt
docker/SSBFS/GraphBLAS/: Dockerfile
docker/SSBFS/Gunrock/: Dockerfile
docker/SSBFS/Spark/: Dockerfile  requirements.txt
pageRank/GraphBLAS/: Dockerfile  GBPRAlgo.py  bench_runner.py
pageRank/Gunrock/: CMakeLists.txt  Dockerfile  GunrockPR.py  bench_runner.py  main.cu
pageRank/Gunrock/cmake/: FetchEssentials.cmake
pageRank/Spark/: Dockerfile  Makefile  SparkPG.py  bench_runner.py  requirements.txt
parent_bfs/GraphBLAS/: Dockerfile  Multi.py  SingleSourceParentBFSAlgo.py  bench_runner.py
scripts/: gunrock_pagerank.sh
src/: dataset_utils.py  sources_generator.py
src/algo/: GunrockAlgo.py  algo.py
src/algo/SSBFS/Gunrock/: CMakeLists.txt  GunrockSSBFS.py  ssbfs.cu  ssbfs.hxx
src/algo/SSBFS/Gunrock/cmake/: FetchEssentials.cmake
src/bench/: Bench.py  visualizer.py
visualizer/: main.py
(+32 files in other folders)
